<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentInfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/layoutTeacher"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inptTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/professor_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inptTxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/professor_surname" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:id="@+id/firstDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTeacher"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTeacher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/layoutCourse"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCourseTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inptCourseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCourseYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inptCourseYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/academic_year"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:id="@+id/secondDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCourse"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutCourse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/layoutCourseStats"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCourseHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inptCourseHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_lecture_hours"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCourseLVHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inptCourseHoursLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_lecture_hours_LV"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnUnesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        android:onClick="ShowDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>